--- a/src/tf2_gui_tools/ui/mainwindow.ui
+++ b/src/tf2_gui_tools/ui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>828</width>
-    <height>717</height>
+    <width>823</width>
+    <height>685</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -44,6 +44,9 @@
      </item>
      <item row="5" column="1">
       <widget class="QSlider" name="slider_rz">
+       <property name="maximum">
+        <number>100</number>
+       </property>
        <property name="value">
         <number>50</number>
        </property>
@@ -79,6 +82,9 @@
      </item>
      <item row="4" column="1">
       <widget class="QSlider" name="slider_ry">
+       <property name="maximum">
+        <number>100</number>
+       </property>
        <property name="value">
         <number>50</number>
        </property>
@@ -120,6 +126,15 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="maximum">
+        <number>100</number>
+       </property>
+       <property name="singleStep">
+        <number>1</number>
+       </property>
        <property name="value">
         <number>50</number>
        </property>
@@ -130,6 +145,9 @@
      </item>
      <item row="3" column="1">
       <widget class="QSlider" name="slider_rx">
+       <property name="maximum">
+        <number>100</number>
+       </property>
        <property name="value">
         <number>50</number>
        </property>
@@ -140,6 +158,9 @@
      </item>
      <item row="2" column="1">
       <widget class="QSlider" name="slider_z">
+       <property name="maximum">
+        <number>100</number>
+       </property>
        <property name="value">
         <number>50</number>
        </property>
@@ -188,6 +209,9 @@
      </item>
      <item row="1" column="1">
       <widget class="QSlider" name="slider_y">
+       <property name="maximum">
+        <number>100</number>
+       </property>
        <property name="value">
         <number>50</number>
        </property>
@@ -435,7 +459,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>410</y>
+      <y>370</y>
       <width>791</width>
       <height>20</height>
      </rect>
@@ -444,29 +468,11 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_send">
-    <property name="geometry">
-     <rect>
-      <x>230</x>
-      <y>370</y>
-      <width>101</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Send TF</string>
-    </property>
-   </widget>
    <widget class="QCheckBox" name="ckb_cont">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>380</y>
+      <x>430</x>
+      <y>30</y>
       <width>201</width>
       <height>25</height>
      </rect>
@@ -479,56 +485,47 @@
     <property name="text">
      <string>Send TF Continously</string>
     </property>
-   </widget>
-   <widget class="QLabel" name="lb_status">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>380</y>
-      <width>131</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string/>
+    <property name="checked">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>430</y>
-      <width>411</width>
+      <y>390</y>
+      <width>481</width>
       <height>41</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
      <item>
       <widget class="QLabel" name="lb_quat">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Quaternion [x, y, z, w]  = </string>
+        <string>Quaternion [w, x, y, z]  = </string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="lb_xyzw">
+      <widget class="QLabel" name="lb_wxyz">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>[0.00, 0.00, 0.00, 1.00]</string>
+        <string>[ 1.000, 0.000, 0.000, 0.000 ]</string>
        </property>
       </widget>
      </item>
@@ -538,7 +535,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>490</y>
+      <y>450</y>
       <width>220</width>
       <height>23</height>
      </rect>
@@ -564,73 +561,25 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>480</y>
-      <width>221</width>
+      <y>440</y>
+      <width>261</width>
       <height>179</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="0" column="0">
-      <widget class="QLabel" name="lb_mtx00">
+     <item row="1" column="0">
+      <widget class="QLabel" name="lb_mtx10">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>1.00</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="3">
-      <widget class="QLabel" name="lb_mtx23">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>0.00</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="lb_mtx30">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>0.00</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="3">
-      <widget class="QLabel" name="lb_mtx33">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>1.00</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="2">
-      <widget class="QLabel" name="lb_mtx32">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>0.00</string>
+        <string>0.000</string>
        </property>
       </widget>
      </item>
@@ -642,31 +591,7 @@
         </font>
        </property>
        <property name="text">
-        <string>0.00</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="3">
-      <widget class="QLabel" name="lb_mtx13">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>0.00</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="lb_mtx31">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>0.00</string>
+        <string>0.000</string>
        </property>
       </widget>
      </item>
@@ -678,55 +603,31 @@
         </font>
        </property>
        <property name="text">
-        <string>0.00</string>
+        <string>0.000</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="lb_mtx01">
+     <item row="3" column="2">
+      <widget class="QLabel" name="lb_mtx32">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>0.00</string>
+        <string>0.000</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
-      <widget class="QLabel" name="lb_mtx22">
+     <item row="3" column="1">
+      <widget class="QLabel" name="lb_mtx31">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>1.00</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QLabel" name="lb_mtx02">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>0.00</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLabel" name="lb_mtx11">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>1.00</string>
+        <string>0.000</string>
        </property>
       </widget>
      </item>
@@ -738,19 +639,67 @@
         </font>
        </property>
        <property name="text">
-        <string>0.00</string>
+        <string>0.000</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="lb_mtx10">
+     <item row="3" column="3">
+      <widget class="QLabel" name="lb_mtx33">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>0.00</string>
+        <string>1.000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLabel" name="lb_mtx11">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>1.000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
+      <widget class="QLabel" name="lb_mtx13">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>0.000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="lb_mtx00">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>1.000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QLabel" name="lb_mtx02">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>0.000</string>
        </property>
       </widget>
      </item>
@@ -762,7 +711,55 @@
         </font>
        </property>
        <property name="text">
-        <string>0.00</string>
+        <string>0.000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="lb_mtx30">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>0.000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="QLabel" name="lb_mtx22">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>1.000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="3">
+      <widget class="QLabel" name="lb_mtx23">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>0.000</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="lb_mtx01">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>0.000</string>
        </property>
       </widget>
      </item>
@@ -772,7 +769,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>530</y>
+      <y>490</y>
       <width>91</width>
       <height>25</height>
      </rect>
@@ -786,13 +783,26 @@
      <string>Inverse</string>
     </property>
    </widget>
+   <widget class="QLabel" name="lb_img">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>410</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>828</width>
+     <width>823</width>
      <height>24</height>
     </rect>
    </property>
@@ -803,6 +813,8 @@
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../res/resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
